update: Unit 16-2, Unit 3-2, Unit 12-1

--- a/english/write/001-020_letter.md
+++ b/english/write/001-020_letter.md
@@ -14,7 +14,7 @@ Do not sign your own name at the end of the notice. Use “Postgraduates' Associ
 <p align="right">January 9, 2010</p>
 &emsp;&emsp;Volunteers are needed for the International Conference on Globalization to be held on this campus in early July.<br>
 &emsp;&emsp;Basic requirements are familiarity with the theme of the conference and proficiency in English. Other requirements include good interpersonal communication abilities, familiarity with our city's tourist attractions and its history, proper manners, and a strong sense of responsibility. Preference will be given to those experienced in international conferences or other similar activities.<br>
-&emsp;&emsp;Call 86754321 or email postgr@ccc.edu.cn for an application and for information on the interview. Phone and email enquiries are encouraged; No visited please.<br>
+&emsp;&emsp;Call 86754321 or email postgr@ccc.edu.cn for an application and for information on the interview. Phone and email enquiries are encouraged; no visited please.<br>
 <p align="right">Postgraduates' Association</p>
 
 ### 译文
@@ -23,8 +23,8 @@ Do not sign your own name at the end of the notice. Use “Postgraduates' Associ
 <p align="right">2010年1月9日</p>
 
 &emsp;&emsp;本校将于七月初举行关于全球化的国际研讨会，现招募志愿者。<br>
-&emsp;&emsp;基本要求是熟悉本次会议的主题以及精通英语。其他要求包括良好的人际沟通能力熟悉我市的景点及历史、举止得体以及有较强的责任感。在国际会议或其他类似活动中具有相关经验者优先考虑。<br>
-&emsp;&emsp;申请职位以及咨询面试相关信息，请致电86754321或发送邮件到postgr@ccc.edu.cn。欢迎垂询，谢绝来访。
+&emsp;&emsp;基本要求是熟悉本次会议的主题以及精通英语。其他要求包括良好的人际沟通能力、熟悉我市的景点及历史、举止得体以及有较强的责任感。在国际会议或其他类似活动中具有相关经验者优先考虑。<br>
+&emsp;&emsp;申请职位以及咨询面试相关信息，请致电86754321或发送邮件到postgr@ccc.edu.cn。欢迎垂询，ggg绝来访。
 
 <p align="right">研究生会</p>
 
