--- a/english/write/041-060_essay.md
+++ b/english/write/041-060_essay.md
@@ -17,8 +17,8 @@ increase from 0.4 to 4 billion mobile-phone subscriptions in developing countrie
 remained steady at just under 1 billion.<br>
 &emsp;&emsp;At least two fundamental factors could have contributed to this phenomenon. On the one hand, with the rapid
 increase in economic development happening in developing countries, the telecommunication industry in those countries
-has expanded greatly to meet the demand of globalization. As a result, the user base of mobile phones, which can narrow
-the distance between people and link the whole world together, grew at an incredible speed. On the other hand, the
+has expanded greatly to meet the demand for globalization. As a result, the user base of mobile phones, which can narrow
+the distance between people and link the whole world together, grew at an astonishing  speed. On the other hand, the
 extremely advanced economy of developed countries means less potential in many aspects and their demand for further
 enlargement tends to saturate.<br>
 &emsp;&emsp;Although the fact remains that phones are already extremely prevalent in both developing and developed
@@ -27,10 +27,10 @@ attention to the market in developing countries.<br>
 
 ### 译文
 
-根据上面的柱状图提供的信息，我们可以看出，从2000年到2008年，发展中国家和发达国家在手机入网方面存在着惊人地对比。在此期间，发展中国家手机入网数从4亿急速增长到
+&emsp;&emsp;根据上面的柱状图提供的信息，我们可以看出，从2000年到2008年，发展中国家和发达国家在手机入网方面存在着惊人地对比。在此期间，发展中国家手机入网数从4亿急速增长到
 40 亿，而发达国家的相关数据在10亿之下保持平稳。<br>
-至少有两点主要原因造成了这种现象。一方面，随着发展中国家的经济快速增长这些国家的电信产业大幅扩张以满足全球化的需求。因此，使用手机来缩短人与人之间的距离并与全世界联系的人数以惊人的速度增长。另一方面，发达国家高度发达的经济意味着它们在诸多领域发展潜力较小，他们对进一步开发的需求趋于饱和。<br>
-尽管手机在发展中国家和发达国家已经非常普遍，但这一差距在未来还会继续扩大。因此，手机制造商应该更加关注发展中国家的市场。
+&emsp;&emsp;至少有两点主要原因造成了这种现象。一方面，随着发展中国家的经济快速增长，这些国家的电信产业大幅扩张以满足全球化的需求。因此，使用手机来缩短人与人之间的距离并与全世界联系的人数以惊人的速度增长。另一方面，发达国家高度发达的经济意味着它们在诸多领域发展潜力较小，他们对进一步开发的需求趋于饱和。<br>
+&emsp;&emsp;尽管手机在发展中国家和发达国家已经非常普遍，但这一差距在未来还会继续扩大。因此，手机制造商应该更加关注发展中国家的市场。
 
 ## 042
 
