fix: update 003 letter

--- a/english/write/001-020_letter.md
+++ b/english/write/001-020_letter.md
@@ -66,6 +66,19 @@ of the places you would like to visit.<br>
 
 ## 003
 
+### Directions
+
+Some international students are coming to your university, Write them an email in the name of the Students’ Union to
+
+1) extend your welcome and
+2) provide some suggestions for their campus life here.
+
+   You should write about 100 words on ANSWER SHEET 2.
+   Do not sign your own name at the end of the letter. Use “Li Ming” instead.
+   Do not write the address.
+
+### Example
+
 Dear friends,<br>
 &emsp;&emsp;On behalf of the Students' Union of Beijing Foreign Studies University, I would like to extend
 our heartfelt welcome to all the overseas students who will study in our university.<br>
@@ -78,6 +91,16 @@ provide ample opportunities to make friends. So, enjoy your life in this esteeme
 worthwhile and enhance your whole life. Hope you like it here.<br>
 <p align="right">Yours sincerely,</p>
 <p align="right">Li Ming</p>
+
+### 译文
+
+亲爱的朋友们:<br>
+&emsp;&emsp;我谨代表北京外国语大学学生会，向来我校学习的留学生表示衷心的欢迎。<br>
+&emsp;&emsp;我很荣幸能给你们提一些实用的建议。首先，这所知名学府的生活也许并不像你们所设想的那么轻松。你们可能会面临每日的课程、大量的作业和频繁的考试。因此，做好准备迎接这里的繁忙生活吧。其次，尽管有以上负担，运动会、演讲比赛以及联谊会等各种各样的课外活动仍会提供大量结交朋友的机会。所以，尽情享受这所著名大学里的生活吧!<br>
+&emsp;&emsp;总之，尽管有很多压力，但你们在这所校园里度过的时光将意义非凡，并为你的整个人生增添光彩。希望你们喜欢这里!<br>
+
+<p align="right">您真诚的，</p>
+<p align="right">李明</p>
 
 ## 004
 
@@ -376,8 +399,11 @@ below:
 ## 020
 
 ### Directions
+
 Directions:<br>
-&emsp;&emsp;Suppose your class held a class meeting on contributing to Project Hope last weekend. You were assigned to write the minutes of the meeting. In your minutes, you should record the basic information, main content of the meeting, and other relevant information.<br>
+&emsp;&emsp;Suppose your class held a class meeting on contributing to Project Hope last weekend. You were assigned to
+write the minutes of the meeting. In your minutes, you should record the basic information, main content of the meeting,
+and other relevant information.<br>
 &emsp;&emsp;Write your answer in about 100 words on the ANSWER SHEET.<br>
 &emsp;&emsp;Do not use your own name in your minutes, use “Li Ming” instead.<br>
 
@@ -390,8 +416,13 @@ Place: Room 102, the Student Recreation Center<br>
 Present: All members of the class<br>
 Presided by: Zhang Wei<br>
 Summary of the meeting:<br>
-&emsp;&emsp;I am attaching the minutes of the last class meeting for your review. The summary of the meeting on Contributing to Project Hope is as follows.<br>
-&emsp;&emsp;Firstly, moved by the noble cause of Project Hope and encouraged by what has been achieved so far, we agreed to contribute our part to the project by offering financial aid to a senior high school student in a remote area of Sichuan Province. Secondly, we will seek out a girl whose family cannot afford her education. Lastly, our plan is to pay for her tuition on an annual basis until she graduates from high school. We would like to remit our donation directly to a bank account opened by her family in her local area.<br>
+&emsp;&emsp;I am attaching the minutes of the last class meeting for your review. The summary of the meeting on
+Contributing to Project Hope is as follows.<br>
+&emsp;&emsp;Firstly, moved by the noble cause of Project Hope and encouraged by what has been achieved so far, we agreed
+to contribute our part to the project by offering financial aid to a senior high school student in a remote area of
+Sichuan Province. Secondly, we will seek out a girl whose family cannot afford her education. Lastly, our plan is to pay
+for her tuition on an annual basis until she graduates from high school. We would like to remit our donation directly to
+a bank account opened by her family in her local area.<br>
 &emsp;&emsp;If you discover any errors or omissions in the minutes, please inform me.
 
 <p align="right">Submitted by: Li Ming</p>
