Update: Unit 14-2, Unit 15-1, Unit 15-2, Unit 17-1

--- a/english/write/041-060_essay.md
+++ b/english/write/041-060_essay.md
@@ -236,9 +236,9 @@ multidimensional, colorful and vigorous.
 
 ### 译文
 
-&emsp;&emsp;这幅图画生动地描绘了一位可爱的美国女孩,她身穿传统的中式服装,面带甜美的微笑。她戴着具有中国某个少数民族服饰特色的发带、项链和其他饰品。毫无疑问，这套服装为她美丽的外表增添了东方的魅力。<br>
+&emsp;&emsp;这幅图画生动地描绘了一位可爱的美国女孩，她身穿传统的中式服装，面带甜美的微笑。她戴着具有中国某个少数民族服饰特色的发带、项链和其他饰品。毫无疑问，这套服装为她美丽的外表增添了东方的魅力。<br>
 &emsp;&emsp;神秘的中国文化吸引了各国人民这一事实表明，在某种程度上一种文化可以在国际范围内被接受、尊重、欣赏和分享。换言之，一个国家独特的文化可以通过全球性的经济和文化交流走向世界。由于全球化潮流已经不可阻挡，所以日益频繁的文化交流可以有效地增进国家之间的相互理解和友谊。<br>
-&emsp;&emsp;在我看来，我们应该保护和珍惜作为无价的精神财富的民族文化。不过，我们在面对不同文化时,应该足够理智地取其精华、去其糟粕。只有这样我们才能积极推动文化发展使我们的世界丰富多元、多姿多彩、充满活力。
+&emsp;&emsp;在我看来，我们应该保护和珍惜作为无价的精神财富的民族文化。不过，我们在面对不同文化时，应该足够理智地取其精华、去其糟粕。只有这样我们才能积极推动文化发展使我们的世界丰富多元、多姿多彩、充满活力。
 
 ## 049
 
