review: Unit 17-1, Unit 8-1, Unit 12-2

--- a/english/write/041-060_essay.md
+++ b/english/write/041-060_essay.md
@@ -18,7 +18,7 @@ remained steady at just under 1 billion.<br>
 &emsp;&emsp;At least two fundamental factors could have contributed to this phenomenon. On the one hand, with the rapid
 increase in economic development happening in developing countries, the telecommunication industry in those countries
 has expanded greatly to meet the demand for globalization. As a result, the user base of mobile phones, which can narrow
-the distance between people and link the whole world together, grew at an astonishing  speed. On the other hand, the
+the distance between people and link the whole world together, grew at an astonishing speed. On the other hand, the
 extremely advanced economy of developed countries means less potential in many aspects and their demand for further
 enlargement tends to saturate.<br>
 &emsp;&emsp;Although the fact remains that phones are already extremely prevalent in both developing and developed
@@ -97,7 +97,7 @@ city in 2017. Among all the five categories, the percentages of feature, service
 accounting for 36.3%, 26.8% and 23.8% respectively. On the contrary, the statistics of price and other factors take up
 merely 8.4% and 4.7% respectively, the lowest among the five groups.<br>
 &emsp;&emsp;Several primary causes that contribute to the above-mentioned phenomenon could be summarized as follows. In
-the first place, with the prosperity of economy in China and the increase of people's income in recent decades, a large
+the first place, with the prosperity of China's economy and the increase of people's income in recent decades, a large
 number of people are paying more attention to the feature of a restaurant instead of price. In the second place, in a
 bid to develop interpersonal relationship and enjoy comfortable life, consumers in mounting numbers prefer service and
 environment to other factors.<br>
