--- a/english/write/001-020_letter.md
+++ b/english/write/001-020_letter.md
@@ -104,17 +104,36 @@ worthwhile and enhance your whole life. Hope you like it here.<br>
 
 ## 004
 
+### Directions
+
+&emsp;&emsp;Suppose you have found something wrong with the electronic dictionary that you bought from an online store
+the other day. Write an email to the customer service center to
+
+1) make a complaint, and
+2) demand a prompt solution
+
+You should write about 100 words on ANSWER SHEET 2.
+Do not sign your own name at the end of the letter, Use “Zhang Wei” instead.
+Do not write the address.
+
+### Example
+
 Dear Sir or Madam,<br>
-&emsp;&emsp;I bought an electronic dictionary from your online store on January 1st, but after using it for
-a short period of time, I found it has some problems.<br>
-&emsp;&emsp;To begin with, the battery needs recharging after a mere 2 hours of use. This means that I need
-to carry my charger with me when I go out for a day. In addition, the buttons on the electronic dictionary **are** so
-small that it is nearly impossible to type anything with them. Personally, I find **this to be completely unacceptable
-**.<br>
-&emsp;&emsp;Therefore, I would like **either to change for** another model that works better or a full
-refund. Your help is greatly appreciated.<br>
-<p align="right">**Yours** sincerely</p>
+&emsp;&emsp;I bought an electronic dictionary from your online store on January 1st, but after using it for a short period of time, I found it has some problems.<br>
+&emsp;&emsp;To begin with, the battery needs recharging after a mere 2 hours of use. This means that I need to carry my charger with me when I go out for a day. In addition, the buttons on the electronic dictionary are so small that it is nearly impossible to type anything with them. Personally, I find this to be completely unacceptable.<br>
+&emsp;&emsp;Therefore, I would like either to change to another model that works better or a full refund. Your help is greatly appreciated.<br>
+<p align="right">Yours sincerely,</p>
 <p align="right">Zhang Wei</p>
+
+### 译文
+
+&emsp;&emsp;尊敬的先生或女士:
+&emsp;&emsp;1月1日我在贵网店购买了一部电子词典，但在使用了一段时间之后，我发现它有一些问题。
+&emsp;&emsp;首先，在仅仅使用两小时之后，电池就需要充电。这就意味着当我出门一天时，就需要随身携带充电器。此外，这部电子词典的按键如此之小，以至于几乎无法通过键盘输入任何东西。对我个人而言，我认为这一点完全不能接受。
+&emsp;&emsp;因此，我希望要么为我换一个能运行得更佳的型号，要么全额退款。非常感谢您的帮助。
+
+<p align="right">您真诚的，</p>
+<p align="right">张伟</p>
 
 ## 005
 
