--- a/english/write/001-020_letter.md
+++ b/english/write/001-020_letter.md
@@ -44,12 +44,8 @@ Do not sign your own name at the end of the letter. Use “Zhang Wei” instead.
 ### Example
 
 Dear Bob,<br>
-&emsp;&emsp;I have just arrived at my home from the airport. As I sit down at my desk, I just want to write
-a letter to you to thank you for your warm **reception** in the **cultural** exchange program. You and your family left
-a deep impression upon me. Indeed, the program is one of the most wonderful **memories** in my life.<br>
-&emsp;&emsp;I remember you **mentioned** wanting to **travel** in China. Well, if you come to China, you
-will be warmly welcomed, and it will be my pleasure to be your guide here. If you would like, send me a list beforehand
-of the places you would like to visit.<br>
+&emsp;&emsp;I have just arrived at my home from the airport. As I sit down at my desk, I just want to write a letter to you to thank you for your warm **reception** in the **cultural** exchange program. You and your family left a deep impression upon me. Indeed, the program is one of the most wonderful **memories** in my life.<br>
+&emsp;&emsp;I remember you **mentioned** wanting to **travel** in China. Well, if you come to China, you will be warmly welcomed, and it will be my pleasure to be your guide here. If you would like, send me a list beforehand of the places you would like to visit.<br>
 &emsp;&emsp;Please give my best regards to your family.<br>
 <p align="right">Yours,</p>
 <p align="right">Zhang Wei</p>
@@ -119,9 +115,13 @@ Do not write the address.
 ### Example
 
 Dear Sir or Madam,<br>
-&emsp;&emsp;I bought an electronic dictionary from your online store on January 1st, but after using it for a short period of time, I found it has some problems.<br>
-&emsp;&emsp;To begin with, the battery needs recharging after a mere 2 hours of use. This means that I need to carry my charger with me when I go out for a day. In addition, the buttons on the electronic dictionary are so small that it is nearly impossible to type anything with them. Personally, I find this to be completely unacceptable.<br>
-&emsp;&emsp;Therefore, I would like either to change to another model that works better or a full refund. Your help is greatly appreciated.<br>
+&emsp;&emsp;I bought an electronic dictionary from your online store on January 1st, but after using it for a short
+period of time, I found it has some problems.<br>
+&emsp;&emsp;To begin with, the battery needs recharging after a mere 2 hours of use. This means that I need to carry my
+charger with me when I go out for a day. In addition, the buttons on the electronic dictionary are so small that it is
+nearly impossible to type anything with them. Personally, I find this to be completely unacceptable.<br>
+&emsp;&emsp;Therefore, I would like either to change to another model that works better or a full refund. Your help is
+greatly appreciated.<br>
 <p align="right">Yours sincerely,</p>
 <p align="right">Zhang Wei</p>
 
@@ -137,17 +137,32 @@ Dear Sir or Madam,<br>
 
 ## 005
 
-Dear Professor Smith<br>
-&emsp;&emsp;On behalf of the "Talents" English Speech Contest committee, I'm writing to invite you to be our
-new judge.<br>
-&emsp;&emsp;As **the core** of our "Foreign Culture Festival", this school-wide contest **is to be held** in
-the Students' **Auditorium** on May 12 (next Sunday). And we believe that you can give our **competitors** some
-enlightening comments as both a native-English speaker and a knowledgeable professor. Specifically, the event **will
-start** at around 7:00 p.m. and **last for** 2 hours at most. At the end of it, we will have some hand-made **presents**
-for each judge and competitor.<br>
-&emsp;&emsp;Once again, we sincerely hope you can be the judge **for** our competition.
+### Directions
+
+&emsp;&emsp;Write an e-mail of about 100 words to a foreign teacher in your college, inviting him/her to be a judge for the upcoming English speech contest.
+&emsp;&emsp;You should include the details you think necessary.
+&emsp;&emsp;You should write neatly on the ANSWER SHEET.
+&emsp;&emsp;Do not sign your own name at the end of the e-mail. Use “Li Ming” instead.
+&emsp;&emsp;Do not write the address.
+
+### Example
+
+Dear Professor Smith,<br>
+&emsp;&emsp;On behalf of the "Talents" English Speech Contest committee, I am writing to invite you to serve as one of our judges.<br>
+&emsp;&emsp;As a key event of the "Foreign Culture Festival", this school-wide contest is to be held in the Students' Auditorium on May 12 (next Sunday). And we believe that you can provide some valuable and enlightening comments for our competitors as both a native English speaker and a knowledgeable professor. Specifically, the event will start at around 7:00 p.m. and last for two hours at most. At the end of it, we will have some hand-made presents for each judge and competitor.<br>
+&emsp;&emsp;Once again, we sincerely hope you can be the judge for our competition.
 <p align="right">Yours sincerely,</p>
 <p align="right">Li Ming</p>
+
+### 译文
+
+尊敬的史密斯教授:<br>
+&emsp;&emsp;谨代表“天才”英语演讲比赛委员会，我写这封邮件是为了邀请您担任我们的新评委。<br>
+&emsp;&emsp;作为“外国文化节”的核心部分，这场全校性的比赛将于5月12日（下周日）在学生大礼堂举行。我们相信您作为一位以英语为母语的人士和知识渊博的教授，能给参赛选手一些启发性的评论。具体来讲，比赛将在晚上七点左右开始，最多持续两个小时。比赛的最后，我们将给每位评委和选手送上一些手工礼物。<br>
+&emsp;&emsp;我们再次真诚地希望您能成为我们比赛的评委。
+
+<p align="right">您真诚的，</p>
+<p align="right">李明</p>
 
 ## 006
 
