review: Unit 17-2, Unit 10-1, Unit 17-1

--- a/english/word/simple-word/markdown/p9-p11.md
+++ b/english/word/simple-word/markdown/p9-p11.md
@@ -167,11 +167,12 @@
     - speaker n. 演讲者，扬声器
 - water
 - act
-    - vi. 行动 n. 法令
-    - 法案
-        - twenty-seven Acts of Parliament([ˈpɑːrləmənt] 国会) this field...
-        - parley [ˈpɑrli] 会议
-        - party 聚会
+    - vi. 行动
+    - n. 法令
+    - act as 扮演...；担任...
+    - twenty-seven Acts of Parliament([ˈpɑːrləmənt] 国会) this field...
+    - parley [ˈpɑrli] 会议
+    - party 聚会
 - bad
 - clearly
     - adv. 清楚地；明白地
