--- a/english/write/001-020_letter.md
+++ b/english/write/001-020_letter.md
@@ -44,8 +44,12 @@ Do not sign your own name at the end of the letter. Use “Zhang Wei” instead.
 ### Example
 
 Dear Bob,<br>
-&emsp;&emsp;I have just arrived at my home from the airport. As I sit down at my desk, I just want to write a letter to you to thank you for your warm **reception** in the **cultural** exchange program. You and your family left a deep impression upon me. Indeed, the program is one of the most wonderful **memories** in my life.<br>
-&emsp;&emsp;I remember you **mentioned** wanting to **travel** in China. Well, if you come to China, you will be warmly welcomed, and it will be my pleasure to be your guide here. If you would like, send me a list beforehand of the places you would like to visit.<br>
+&emsp;&emsp;I have just arrived at my home from the airport. As I sit down at my desk, I just want to write a letter to
+you to thank you for your warm **reception** in the **cultural** exchange program. You and your family left a deep
+impression upon me. Indeed, the program is one of the most wonderful **memories** in my life.<br>
+&emsp;&emsp;I remember you **mentioned** wanting to **travel** in China. Well, if you come to China, you will be warmly
+welcomed, and it will be my pleasure to be your guide here. If you would like, send me a list beforehand of the places
+you would like to visit.<br>
 &emsp;&emsp;Please give my best regards to your family.<br>
 <p align="right">Yours,</p>
 <p align="right">Zhang Wei</p>
@@ -139,7 +143,8 @@ greatly appreciated.<br>
 
 ### Directions
 
-&emsp;&emsp;Write an e-mail of about 100 words to a foreign teacher in your college, inviting him/her to be a judge for the upcoming English speech contest.
+&emsp;&emsp;Write an e-mail of about 100 words to a foreign teacher in your college, inviting him/her to be a judge for
+the upcoming English speech contest.
 &emsp;&emsp;You should include the details you think necessary.
 &emsp;&emsp;You should write neatly on the ANSWER SHEET.
 &emsp;&emsp;Do not sign your own name at the end of the e-mail. Use “Li Ming” instead.
@@ -148,8 +153,13 @@ greatly appreciated.<br>
 ### Example
 
 Dear Professor Smith,<br>
-&emsp;&emsp;On behalf of the "Talents" English Speech Contest committee, I am writing to invite you to serve as one of our judges.<br>
-&emsp;&emsp;As a key event of the "Foreign Culture Festival", this school-wide contest is to be held in the Students' Auditorium on May 12 (next Sunday). And we believe that you can provide some valuable and enlightening comments for our competitors as both a native English speaker and a knowledgeable professor. Specifically, the event will start at around 7:00 p.m. and last for two hours at most. At the end of it, we will have some hand-made presents for each judge and competitor.<br>
+&emsp;&emsp;On behalf of the "Talents" English Speech Contest committee, I am writing to invite you to serve as one of
+our judges.<br>
+&emsp;&emsp;As a key event of the "Foreign Culture Festival", this school-wide contest is to be held in the Students'
+Auditorium on May 12 (next Sunday). And we believe that you can provide some valuable and enlightening comments for our
+competitors as both a native English speaker and a knowledgeable professor. Specifically, the event will start at around
+7:00 p.m. and last for two hours at most. At the end of it, we will have some hand-made presents for each judge and
+competitor.<br>
 &emsp;&emsp;Once again, we sincerely hope you can be the judge for our competition.
 <p align="right">Yours sincerely,</p>
 <p align="right">Li Ming</p>
@@ -213,32 +223,73 @@ presentation.<br>
 
 ## 009
 
+### Directions
+
+Read the following email from your classmate Paul and write him a reply
+
+> Dear Li Ming,
+> I was really excited to hear that you'd invite some young craftsmen to demonstrate their innovative craft-making on
+> campus. May I know more about what they'll show? Also, I'd like to help with your preparation work. Please let me know
+> what I can do.
+> Yours,
+> Paul
+
+Write your answer in about 100 words on the ANSWER SHEET
+Do not use your own name in your email; use 'Li Ming" instead
+
+### Example
+
 Dear Paul,<br>
-&emsp;&emsp;I'm glad to hear from you. Thank you for your **enthusiastic** response to the event!<br>
-&emsp;&emsp;As you know, I will invite a great many **craftsmen** to our **campus**. They will show a *
-*variety** of **innovative** Chinese craft-making, especially silk-making. Silk-making is a **handicraft inherited**
-from ancient China, as well as a traditional art form. Silk is a symbol of **ancient Chinese culture**, and the long
-history of China's silk industry is **a brilliant page** in the **encyclopedia** of Chinese culture.<br>
-&emsp;&emsp;This event is going to be held in the Students' Recreation Center from 10:00 am to 4:00 pm on
-May 1, 2025. Could you please help me **to** write the letters of invitation **to** all the craftsmen? Looking forward
-to your support.<br>
+&emsp;&emsp;I'm glad to hear from you. Thank you for your enthusiastic response to the event!<br>
+&emsp;&emsp;As you know, I will invite a great many craftsmen to our campus. They will show a variety of innovative
+Chinese craft-making, especially silk-making. Silk-making is a handicraft inherited from ancient China, as well as a
+traditional art form. Silk is a symbol of ancient Chinese culture, and the long history of China's silk industry is a
+brilliant page in the encyclopedia of Chinese culture.<br>
+&emsp;&emsp;This event is going to be held in the Students' Recreation Center from 10:00 am to 4:00 pm on May 1, 2025.
+Could you please help me to write the letters of invitation to all the craftsmen? Looking forward to your support.<br>
 
 <p align="right">Yours faithfully,</p>
 <p align="right">Li Ming</p>
 
+### 译文
+
+亲爱的保罗:<br>
+&emsp;&emsp;很高兴收到你的来信。非常感谢你对本次活动的热情回应!<br>
+&emsp;&emsp;如你所知，我将要邀请很多手工艺者到我们学校来。他们将会展示各种各样创新的中国手工艺品制作，尤其是丝绸制作。丝绸制作是一项从古代中国传承下来的手工艺，也是一种传统的艺术形式。丝绸是中国古代文化的象征，中国丝绸业的悠久历史是中国文化百科全书中光辉的一页。<br>
+&emsp;&emsp;本次活动将于2025年5月1日上午10点至下午4点在学生活动中心举行。请你帮我给所有的手工艺者写邀请信好吗?期待你的支持。
+
+<p align="right">你忠诚的</p>
+<p align="right">李明</p>
+
 ## 010
 
+### Directions
+
+Suppose you are planning a short play based on a classic Chinese novel. Write your friend John an email to
+
+1) introduce the play, and
+2) invite him to take part in it.
+
+Write your answer in about 100 words on the ANSWER SHEETDo not use your own name in your email; use “Li Ming” instead.
+
+### Example
+
 Dear John,<br>
-&emsp;&emsp;As you know, I am extremely keen on the ancient Chinese novel-*Romance of the Three Kingdoms*.
-Now I am planning to direct a short play revised from it<br>
-&emsp;&emsp;*Romance of the Three Kingdoms*, as one of the Four Great Classical Novels in China, mainly
-depicts the political and military struggles during the Three Kingdoms Period and reveals the turbulent society. It
-successfully portrays images of classic characters, such as Zhuge Liang, Liu Bei, Guan Yu, Cao Cao, and so on.<br>
-&emsp;&emsp;Since you excel in acting, I cordially invite you to participate in the play and act as the
-leading hero, Zhuge Liang. I'm sure you will be quite interested in it. Looking forward to your reply.<br>
+&emsp;&emsp;As you know, I am extremely keen on the ancient Chinese novel-Romance of the Three Kingdoms. Now I am planning to direct a short play revised from it.<br>
+&emsp;&emsp;Romance of the Three Kingdoms, as one of the Four Great Classical Novels in China, mainly depicts the political and military struggles during the Three Kingdoms Period and reveals the turbulent society. It successfully portrays images of classic characters, such as Zhuge Liang, Liu Bei, Guan Yu, Cao Cao, and so on.<br>
+&emsp;&emsp;Since you excel in acting, I cordially invite you to participate in the play and act as the leading hero, Zhuge Liang. I'm sure you will be quite interested in it. Looking forward to your reply.<br>
 
 <p align="right">Yours,</p>
 <p align="right">Li Ming</p>
+
+### 译文
+
+亲爱的约翰:
+&emsp;&emsp;如你所知，我非常喜欢《三国演义》这部中国古代小说。现在我计划执导一部根据它改编的短剧。
+&emsp;&emsp;《三国演义》作为中国四大名著之一，主要描写了三国时期的政治和军事斗争，揭示了当时动荡的社会。它成功地塑造了诸葛亮、刘备、关羽、曹操等经典人物形象。
+&emsp;&emsp;由于你擅长表演，我诚挚地邀请你参演这部剧，扮演主人公诸葛亮。我相信你会非常感兴趣的。期待你的回信。
+
+<p align="right">李明</p>
 
 ## 011
 
