feat: add Unit6-1

--- a/english/write/041-060_essay.md
+++ b/english/write/041-060_essay.md
@@ -260,7 +260,7 @@ confronted with, we should never overestimate the difficulties or underestimate 
 ### 译文
 
 &emsp;&emsp;这幅漫画具有象征意味地展示了足球场上的一名前锋正准备将球射入守门员把守的球门。守门员把自己想得比实际的身材渺小得多，以至于守门变成了一项不可能完成的任务。与此同时，在那名前锋看来，这位巨人守门员似乎占据了整个球门。<br>
-&emsp;&emsp;这幅漫画的目的是告诉我们，在看似不可克服的挑战与困境面前，最重要的是拥有自信。无论一个人在学校或工作中曾经如何成功，总有一天他或她会遭遇难题。关键时刻,正是一个人对困难和人生的自信决定他或她能否反败为胜。<br>
+&emsp;&emsp;这幅漫画的目的是告诉我们，在看似不可克服的挑战与困境面前，最重要的是拥有自信。无论一个人在学校或工作中曾经如何成功，总有一天他或她会遭遇难题。关键时刻，正是一个人对困难和人生的自信决定他或她能否反败为胜。<br>
 &emsp;&emsp;没有什么比下面的例子更有说服力。海伦·凯勒失去了听力和视力，没什么可以让她自信。但她不断克服多重障碍，最终成为一名作家和教师，成为世人的楷模。这个例子清楚证明了无论面临何种任务，我们决不能高估困难或低估自己的能力。
 
 ## 050
