--- a/english/write/001-020_letter.md
+++ b/english/write/001-020_letter.md
@@ -206,20 +206,37 @@ to my suggestion would be highly appreciated.<br>
 
 ## 008
 
+### Directions
+
+Read the following email from an international student and write a reply.
+
+> Dear Li Mimg,
+> I've got a class assignment to make an oral report on an ancient Chinese scientist, but I'm not sure how to prepare
+> for it, Can you give me some advice? Thank you for your help.
+> Yours,
+> Paul
+
+Write your answer in about 100 words on the ANSWER SHEET
+Do not use your own name in your email; use “Li Ming" instead
+
+### Example
+
 Dear Paul,<br>
-&emsp;&emsp;I'm glad to hear from you. How have you been these days? Since you're going to **present** an *
-*oral** report on an ancient Chinese **scientist**, Bi Sheng is an ideal candidate.<br>
-&emsp;&emsp;In the middle of the 11 century during the Song **Dynasty**, Bi Sheng invented the movable type
-printing technique. He mainly **used** clay type, which **saved** much time and money compared with block printing.
-After that, the movable type printing technique was widely promoted. China's printing technique was **spread** to the *
-*Arabic region** during the Yuan Dynasty and then to **Africa and Europe**. Printing provided **a** significant
-condition for the European **science** to develop **rapidly** after the long night of the medieval period and **the
-emergence of the Renaissance**.<br>
-&emsp;&emsp;I hope you find the above recommendations useful. Looking forward to your successful
-presentation.<br>
+&emsp;&emsp;I'm glad to hear from you. How have you been these days? Since you're going to present an oral report on an ancient Chinese scientist, Bi Sheng is an ideal candidate.<br>
+&emsp;&emsp;In the middle of the 11 century during the Song Dynasty, Bi Sheng invented the movable type printing technique. He mainly used clay type, which saved much time and money compared with block printing. After that, the movable type printing technique was widely promoted. China's printing technique was spread to the Arabic region during the Yuan Dynasty and then to Africa and Europe. Printing provided favorable conditions for the rapid development of European science after the long medieval night and the emergence of the Renaissance.<br>
+&emsp;&emsp;I hope you find the above recommendations useful. Looking forward to your successful presentation.<br>
 
 <p align="right">Yours,</p>
 <p align="right">Li Ming</p>
+
+### 译文
+
+亲爱的保罗:<br>
+&emsp;&emsp;很高兴收到你的来信。最近过得怎么样？鉴于你要做一份关于一位中国古代科学家的口头报告，毕昇是一个理想的人选。<br>
+&emsp;&emsp;在11世纪中期的宋代，毕昇发明了活字印刷术。他主要使用胶泥活字，比雕版印刷省时又省钱。在那之后，活字印刷术得到了广泛推广。中国的印刷术在元朝时传到了阿拉伯地区，随后又传到非洲和欧洲。在经历了中世纪的漫长黑夜和文艺复兴的出现后，印刷术为欧洲科学的迅速发展提供了重要条件。<br>
+&emsp;&emsp;我希望你觉得上述建议有用。期待你报告成功。<br>
+
+<p align="right">李明</p>
 
 ## 009
 
@@ -270,12 +287,13 @@ Suppose you are planning a short play based on a classic Chinese novel. Write yo
 1) introduce the play, and
 2) invite him to take part in it.
 
-Write your answer in about 100 words on the ANSWER SHEETDo not use your own name in your email; use “Li Ming” instead.
+Write your answer in about 100 words on the ANSWER SHEET
+Do not use your own name in your email; use “Li Ming” instead.
 
 ### Example
 
 Dear John,<br>
-&emsp;&emsp;As you know, I am extremely keen on the ancient Chinese novel-Romance of the Three Kingdoms. Now I am planning to direct a short play revised from it.<br>
+&emsp;&emsp;As you know, I am extremely keen on the ancient Chinese novel-Romance of the Three Kingdoms. Now I am planning to direct a short play revised from it<br>
 &emsp;&emsp;Romance of the Three Kingdoms, as one of the Four Great Classical Novels in China, mainly depicts the political and military struggles during the Three Kingdoms Period and reveals the turbulent society. It successfully portrays images of classic characters, such as Zhuge Liang, Liu Bei, Guan Yu, Cao Cao, and so on.<br>
 &emsp;&emsp;Since you excel in acting, I cordially invite you to participate in the play and act as the leading hero, Zhuge Liang. I'm sure you will be quite interested in it. Looking forward to your reply.<br>
 
