review: Unit 16-2, Unit 15-2, Unit 17-2

--- a/english/write/001-020_letter.md
+++ b/english/write/001-020_letter.md
@@ -176,33 +176,65 @@ competitor.<br>
 
 ## 006
 
+### Directions
+
+&emsp;&emsp;You are to write an email to James Cook, a newly arrived Australian professor, recommending some tourist attractions in your city, Please give reasons for your recommendation.
+&emsp;&emsp;You should write neatly on the ANSWER SHEET.
+&emsp;&emsp;Do not sign your own name at the end of the email. Use “Li Ming” instead.
+&emsp;&emsp;Do not write the address.
+
+### Example
+
 Dear Professor Cook,<br>
-&emsp;&emsp;We are greatly honored to welcome you as a guest professor at our university. I would like to
-recommend two scenic spots in our city: the Palace Museum and the Great Wall.<br>
-&emsp;&emsp;The primary reasons are as follows. To begin with, the Palace Museum, also known as the
-Forbidden City, was the imperial palace of the Ming and Qing Dynasties. **It is also the largest piece of ancient
-Chinese architecture currently existing.** Meanwhile, the Great Wall, symbolizing China's ancient civilization, **is one
-of the world's most renowned projects**. **As the great creation of the ancient Chinese people and one of the wonders of
-the world**, it was listed as one of the world cultural heritage sites in 1987.<br>
-&emsp;&emsp;I hope you will have the opportunity to visit one or both of these spots. We wish you enjoy your
-stay in our city.<br>
+&emsp;&emsp;We are greatly honored to welcome you as a guest professor at our university. I would like to recommend two scenic spots in our city: the Palace Museum and the Great Wall.<br>
+&emsp;&emsp;The primary reasons are as follows. To begin with, the Palace Museum, also known as the Forbidden City, was the imperial palace of the Ming and Qing Dynasties. It is also the largest piece of ancient Chinese architecture currently existing. Meanwhile, the Great Wall, symbolizing China's ancient civilization, is one of the world's most renowned projects. As the great creation of the ancient Chinese people and one of the wonders of the world, it was listed as a World Cultural Heritage site in 1987.<br>
+&emsp;&emsp;I hope you will have the opportunity to visit one or both of these spots. We wish you an enjoyable stay in our city.<br>
 <p align="right">Yours sincerely,</p>
 <p align="right">Li Ming</p>
+
+### 译文
+
+尊敬的库克教授：<br>
+&emsp;&emsp;我们非常荣幸地欢迎您成为我校的客座教授。我想推荐本市的两个景点：故宫和长城
+&emsp;&emsp;主要原因如下：首先，故宫博物院也被称为紫禁城，曾经是明代和清代的皇家宫殿。这座宫殿也是目前仍然屹立的最大的中国古代建筑。同时，长城象征着中国的古代文明是世界上最著名的工程之一。长城是中国古代人民的伟大创造，也是世界奇迹之一，1987年被列为世界文化遗产之一。<br>
+&emsp;&emsp;我希望您将有机会参观这两个景点。我们希望您享受待在本市的时光。<br>
+
+<p align="right">您真诚的</p>
+<p align="right">李明</p>
 
 ## 007
 
+### Directions
+
+Suppose you have to cancel your travel plan and will not be able to visit Professor Smith. Write him an email to
+
+1) apologize and explain the situation, and
+2) suggest a future meeting.
+
+You should write about 100 words on the ANSWER SHEET
+Do not use your own name. Use "Li Ming" instead.
+Do not write your address.
+
+
+### Example
+
 Dear Professor Smith,<br>
-&emsp;&emsp;I am looking forward to my travel to the United States and **visiting** you in Harvard
-University.<br>
-&emsp;&emsp;**Unfortunately**, I have recently been diagnosed with a serious ear infection which will
-require **surgery** on the same day as my departure. I am sorry to say that I will therefore not be able to make the
-travel plan. If possible, I would like to postpone the travel plan to another day later this year. I promise that such a
-situation **does** not usually happen, and **apologize** for any **inconvenience** this may cause you.<br>
-&emsp;&emsp;Please excuse me for not being able to inform you of my situation sooner. Your prompt attention
-to my suggestion would be highly appreciated.<br>
+&emsp;&emsp;I am looking forward to my travel to the United States and visiting you in Harvard University.<br>
+&emsp;&emsp;Unfortunately, I have recently been diagnosed with a serious ear infection which will require surgery on the same day as my departure. I am sorry to say that I will therefore not be able to make the travel plan. If possible, I would like to postpone the travel plan to another day later this year. I promise that such a situation does not usually happen, and apologize for any inconvenience this may cause you.<br> 
+&emsp;&emsp;Please excuse me for not being able to inform you of my situation sooner. Your prompt attention to my suggestion would be highly appreciated.<br>
 
 <p align="right">Yours sincerely,</p>
 <p align="right">Li Ming</p>
+
+### 译文
+
+尊敬的史密斯教授：<br>
+&emsp;&emsp;我期待着去美国旅行并去哈佛大学拜访您。<br>
+&emsp;&emsp;不幸的是,最近我被诊断出患上了一种严重的耳部感染疾病,需要在出发当天进行手术。因此，很抱歉我将不能继续旅行计划。如果可能的话，我希望将旅行计划推迟至今年的其他时间。我保证类似情况绝非经常发生，由此可能给您造成的任何不便，我深表歉意。<br>
+&emsp;&emsp;请原谅我没能提早告诉您我的情况。希望您能及时关注我的建议，我将不胜感激。<br>
+
+<p align="right">您真诚的</p>
+<p align="right">李明</p>
 
 ## 008
 
@@ -258,12 +290,8 @@ Do not use your own name in your email; use 'Li Ming" instead
 
 Dear Paul,<br>
 &emsp;&emsp;I'm glad to hear from you. Thank you for your enthusiastic response to the event!<br>
-&emsp;&emsp;As you know, I will invite a great many craftsmen to our campus. They will show a variety of innovative
-Chinese craft-making, especially silk-making. Silk-making is a handicraft inherited from ancient China, as well as a
-traditional art form. Silk is a symbol of ancient Chinese culture, and the long history of China's silk industry is a
-brilliant page in the encyclopedia of Chinese culture.<br>
-&emsp;&emsp;This event is going to be held in the Students' Recreation Center from 10:00 am to 4:00 pm on May 1, 2025.
-Could you please help me to write the letters of invitation to all the craftsmen? Looking forward to your support.<br>
+&emsp;&emsp;As you know, I will invite a great many craftsmen to our campus. They will show a variety of innovative Chinese craft-making, especially silk-making. Silk-making is a handicraft inherited from ancient China, as well as a traditional art form. Silk is a symbol of ancient Chinese culture, and the long history of China's silk industry is a brilliant page in the encyclopedia of Chinese culture.<br>
+&emsp;&emsp;This event is going to be held in the Students' Recreation Center from 10:00 am to 4:00 pm on May 1, 2025. Could you please help me to write the letters of invitation to all the craftsmen? Looking forward to your support.<br>
 
 <p align="right">Yours faithfully,</p>
 <p align="right">Li Ming</p>
