--- a/english/write/041-060_essay.md
+++ b/english/write/041-060_essay.md
@@ -24,18 +24,29 @@ In this section, you are asked to write an essay based on the following chart. I
 
 ## 042
 
-&emsp;&emsp;The table clearly reflects the statistics of staff's job satisfaction in a certain company. According to the
-data given above, we can conclude that the percentage of people satisfied with their jobs is the highest among those
-over 50 years old, at about 40%. In contrast, the percentage of the staff not satisfied with their jobs is about 64%
-among those in their forties, the highest among all the three age groups.<br>
-&emsp;&emsp;The major determinant of satisfaction lies in people's attitudes. On the one hand, staff members in their
-forties usually have to undertake a lot of responsibilities from both their families and their careers. So, they have
-the least satisfaction in their jobs. On the other hand, people over 50 generally have shifted their life goals from
-achieving the ultimate success to a relatively easy and comfortable life, and therefore are inclined to be much more
-satisfied with their jobs.<br>
-&emsp;&emsp;In view of the above reasoning, I am convinced that it is difficult for everyone to be content with their
-jobs. And it is advisable that people should adjust their expectations for work, and that companies should pay more
-attention to the welfare of their staff.<br>
+### Directions
+
+Write an essay based on the following table. In your writing, you should
+
+1) describe the table, and
+2) give your comments.
+
+You should write at least 150 words.
+Write your essay on ANSWER SHEET 2.
+
+![Chart](./assets/42.jpg)
+
+### Example
+
+&emsp;&emsp;The table clearly reflects the statistics of staff's job satisfaction in a certain company. According to the data given above, we can conclude that the percentage of people satisfied with their jobs is the highest among those over 50 years old, at about 40%. In contrast, the percentage of the staff not satisfied with their jobs is about 64% among those in their forties, the highest among all the three age groups.<br>
+&emsp;&emsp;The major determinant of satisfaction lies in people's attitudes. On the one hand, staff members in their forties usually have to undertake a lot of responsibilities from both their families and their careers. So, they have the least satisfaction in their jobs. On the other hand, people over 50 generally have shifted their life goals from achieving the ultimate success to a relatively easy and comfortable life, and therefore are inclined to be much more satisfied with their jobs.<br>
+&emsp;&emsp;In view of the above reasoning, I am convinced that it is difficult for everyone to be content with their jobs. And it is advisable that people should adjust their expectations for work, and that companies should pay more attention to the welfare of their staff.<br>
+
+### 译文
+
+&emsp;&emsp;这张表格清楚地反映了某公司员工工作满意度的统计数据。根据给出的数据，我们可以看出50岁以上的人工作满意度最高，约为40%。相反，41岁至50岁之间的人在三个年龄段中不满意度最高，约为 64%。<br>
+&emsp;&emsp;满意度的主要决定因素是人们的态度。一方面，41岁至50岁之间的员工通常不得不承担来自家庭和事业的双重责任。因此，他们对工作的满意度最低。另一方面，50岁以上的人通常已经将人生目标从实现最终的成功转变为过一种相对轻松、舒适的生活，因而更容易对工作感到满意。<br>
+&emsp;&emsp;鉴于上述论证，我认为很难做到每个人都对工作满意。建议人们调整对工作的期望而企业也应对员工的福利多加重视。
 
 ## 043
 
