feat: add Unit7-2

--- a/english/write/041-060_essay.md
+++ b/english/write/041-060_essay.md
@@ -46,7 +46,7 @@ Write your essay on ANSWER SHEET 2.
 
 &emsp;&emsp;这张表格清楚地反映了某公司员工工作满意度的统计数据。根据给出的数据，我们可以看出50岁以上的人工作满意度最高，约为40%。相反，41岁至50岁之间的人在三个年龄段中不满意度最高，约为 64%。<br>
 &emsp;&emsp;满意度的主要决定因素是人们的态度。一方面，41岁至50岁之间的员工通常不得不承担来自家庭和事业的双重责任。因此，他们对工作的满意度最低。另一方面，50岁以上的人通常已经将人生目标从实现最终的成功转变为过一种相对轻松、舒适的生活，因而更容易对工作感到满意。<br>
-&emsp;&emsp;鉴于上述论证，我认为很难做到每个人都对工作满意。建议人们调整对工作的期望而企业也应对员工的福利多加重视。
+&emsp;&emsp;鉴于上述论证，我认为很难做到每个人都对工作满意。建议人们调整对工作的期望，而企业也应对员工的福利多加重视。
 
 ## 043
 
