review: Unit10-2, Unit 20-1, Unit 17-1

--- a/english/write/041-060_essay.md
+++ b/english/write/041-060_essay.md
@@ -126,17 +126,9 @@ In this section, you are asked to write an essay based on the following chart. I
 
 ### Example
 
-&emsp;&emsp;The bar chart above clearly reflects the survey of residents' exercising ways in a certain city. According
-to the data given above, the percentage of people exercising alone accounts for 54.3%, the largest in the four
-categories. The percentages of people exercising with friends, families and by taking part in group activities take up
-47.7%, 23.9% and 15.8% respectively.<br>
-&emsp;&emsp;Several factors that account for the above-mentioned phenomena could be summarized as follows. To start
-with, the main reason for sports and exercise is to encourage a healthy lifestyle. Exercising and playing sports can
-have huge benefits for a person's strength, agility, figure and mental well-being. Furthermore, exercising with friends
-and families could instill the values of teamwork and sportsmanship. Exercising in general, whether individual or
-team-based, can teach people how to be sportsmanlike in competitive circumstances.<br>
-&emsp;&emsp;To sum up, by fostering enthusiasm for sports and exercise, society can ensure a generation of healthy and
-sportsmanlike citizens.
+&emsp;&emsp;The bar chart above illustrates the results of a survey on the types of exercise among residents in a certain city. According to the data given above, the percentage of people exercising alone accounts for 54.3%, the highest among the four categories. The percentages of people exercising with friends, family and by taking part in group activities take up 47.7%, 23.9% and 15.8% respectively.<br>
+&emsp;&emsp;Several factors that account for the above-mentioned phenomena could be summarized as follows. To start with, the main reason for sports and exercise is to encourage a healthy lifestyle. Exercising and playing sports can have huge benefits for a person's strength, agility, figure and mental well-being. Furthermore, exercising with friends and family could instill the values of teamwork and sportsmanship. Exercising in general, whether individual or team-based, can teach people how to be sportsmanlike in competitive circumstances.<br> 
+&emsp;&emsp;To sum up, by fostering enthusiasm for sports and exercise, society can ensure a generation of healthy and sportsmanlike citizens.
 
 ### 译文
 
@@ -181,7 +173,7 @@ Accordingly, let us get prepared to embrace this irreversible trend.
 
 ### Directions
 
-In this section, you are asked to write an essay based on the following chart. In your writing,you should<br>
+In this section, you are asked to write an essay based on the following chart. In your writing, you should<br>
 
 1. interpret the chart and
 2. give your comments.
@@ -190,17 +182,9 @@ In this section, you are asked to write an essay based on the following chart. I
 
 ### Example
 
-&emsp;&emsp;The diagram above clearly illustrates that a dramatic increase has occurred in the recruitment of Masters of
-Engineering(ME) in China during the past seven years. In 1998, the number was at a low of only about 2,500.
-Surprisingly, it reached more than 35,000 in 2004, within no more than seven years.<br>
-&emsp;&emsp;Some driving factors that contribute to the above-mentioned change may be summarized as follows. First and
-foremost, China has become particularly active in manufacturing, which has led to an increased demand for qualified
-engineers. In addition, the development of the job market on the whole cannot keep pace with the expansion of college
-graduates, which has obliged a large number of students to stay on campus for another three years to get better prepared
-for their careers.<br>
-&emsp;&emsp;It is necessary for us to take effective measures to ensure this situation doesn't get out of hand, and
-encourage students to choose majors for which both theoretical knowledge and practical skills will be demanded in the
-job market.
+&emsp;&emsp;The diagram above clearly illustrates that a dramatic increase has occurred in the recruitment of Masters of Engineering(ME) in China during the past seven years. In 1998, the number was at a low of only about 2,500. Surprisingly, it reached more than 35,000 in 2004, within no more than seven years.<br> 
+&emsp;&emsp;Some driving factors that contribute to the above-mentioned change may be summarized as follows. First and foremost, China has become particularly active in manufacturing, which has led to an increased demand for qualified engineers. In addition, the development of the job market on the whole cannot keep pace with the expansion of college graduates, which has obliged a large number of students to stay on campus for another three years to get better prepared for their careers.<br>
+&emsp;&emsp;It is necessary for us to take effective measures to ensure this situation doesn't get out of hand, and encourage students to choose majors for which both theoretical knowledge and practical skills will be demanded in the job market. 
 
 ### 译文
 
@@ -213,7 +197,7 @@ job market.
 
 ### Directions
 
-In this section, you are asked to write an essay based on the following chart. In your writing,you should<br>
+In this section, you are asked to write an essay based on the following chart. In your writing, you should<br>
 
 1. interpret the chart and
 2. give your comments.
